--- a/ide/pandora-test/pom.xml
+++ b/ide/pandora-test/pom.xml
@@ -29,14 +29,20 @@
             <groupId>io.intino.pandora</groupId>
             <artifactId>pandora-plugin</artifactId>
             <scope>test</scope>
-            <version>1.0.14</version>
+            <version>1.0.15</version>
         </dependency>
         <dependency>
             <groupId>io.intino.pandora</groupId>
-            <artifactId>pandora-model</artifactId>
+            <artifactId>model</artifactId>
+            <scope>test</scope>
             <version>1.0.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>LATEST</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>com.moandjiezana.toml</groupId>
             <artifactId>toml4j</artifactId>
@@ -52,9 +58,9 @@
         </dependency>
         <dependency>
             <groupId>org.siani.tara</groupId>
-            <artifactId>proteo-alone</artifactId>
+            <artifactId>proteo</artifactId>
             <scope>test</scope>
-            <version>1.0.0</version>
+            <version>LATEST</version>
         </dependency>
         <dependency>
             <groupId>org.siani.tara</groupId>
@@ -75,12 +81,6 @@
             <version>2.0.11</version>
         </dependency>
 
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>LATEST</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>io.intino.pandora</groupId>
             <artifactId>pandora-server</artifactId>
@@ -115,18 +115,6 @@
             <groupId>io.intino.pandora</groupId>
             <artifactId>pandora-rest-accessor-java</artifactId>
             <version>1.0.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.esotericsoftware</groupId>
-            <artifactId>kryo</artifactId>
-            <version>4.0.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.siani.tara</groupId>
-            <artifactId>io</artifactId>
-            <version>LATEST</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
