--- a/ide/pandora-model/pom.xml
+++ b/ide/pandora-model/pom.xml
@@ -76,13 +76,13 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.siani.tara</groupId>
-            <artifactId>proteo-alone</artifactId>
+            <groupId>io.intino.tara</groupId>
+            <artifactId>magritte-lite</artifactId>
             <scope>provided</scope>
             <version>1.0.0</version>
         </dependency>
         <dependency>
-            <groupId>org.siani.tara</groupId>
+            <groupId>io.intino.tara</groupId>
             <artifactId>language</artifactId>
             <scope>provided</scope>
             <version>1.0</version>
