--- a/ide/pandora-builder/res/pandora.toml
+++ b/ide/pandora-builder/res/pandora.toml
@@ -29,7 +29,7 @@ groupId="PandoraToolsGroup"
 [[actions]]
 id="PublishAccesors"
 aClass="io.intino.pandora.plugin.actions.PublishAccessorAction"
-text="Publish Pandora Accessor"
-description="Publish Pandora Accessor in Artifactory"
+text="Distribute Pandora Accessor"
+description="Distribute Pandora Accessor in Artifactory"
 shortcut="control alt A"
 groupId="PandoraToolsGroup"
