--- a/ide/pandora-test/pom.xml
+++ b/ide/pandora-test/pom.xml
@@ -51,13 +51,18 @@
             <version>2.7</version>
         </dependency>
         <dependency>
-            <groupId>org.siani.tara</groupId>
-            <artifactId>proteo</artifactId>
+            <groupId>io.intino.tara</groupId>
+            <artifactId>magritte</artifactId>
             <scope>test</scope>
-            <version>1.6.0</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
-            <groupId>org.siani.tara</groupId>
+            <groupId>io.intino.tara</groupId>
+            <artifactId>io</artifactId>
+            <version>LATEST</version>
+        </dependency>
+        <dependency>
+            <groupId>io.intino.tara</groupId>
             <artifactId>language</artifactId>
             <scope>test</scope>
             <version>LATEST</version>
@@ -115,7 +120,7 @@
             <groupId>io.intino.pandora</groupId>
             <artifactId>pandora-plugin</artifactId>
             <scope>test</scope>
-            <version>1.1.3</version>
+            <version>1.2.0</version>
         </dependency>
     </dependencies>
 </project>
