--- a/core/pom.xml
+++ b/core/pom.xml
@@ -23,9 +23,9 @@
 
     <repositories>
         <repository>
-            <id>siani-maven</id>
-            <name>siani-maven-releases</name>
-            <url>http://artifactory.siani.es/artifactory/libs-release</url>
+            <id>intino-maven</id>
+            <name>intino-maven-releases</name>
+            <url>https://artifactory.intino.io/artifactory/release-libraries</url>
         </repository>
     </repositories>
 
@@ -33,18 +33,19 @@
         <outputDirectory>../out/production/core</outputDirectory>
         <testOutputDirectory>../out/test/core</testOutputDirectory>
         <directory>../out/build/core</directory>
+        <sourceDirectory>src</sourceDirectory>
     </build>
 
     <dependencies>
         <dependency>
-            <groupId>org.siani.cottons</groupId>
+            <groupId>io.intino.cottons</groupId>
             <artifactId>cotton-utils</artifactId>
-            <version>1.0.7</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>[2.0.0, 3.0.0)</version>
+            <version>2.8.0</version>
         </dependency>
     </dependencies>
 </project>
