--- a/ide/pandora-builder/pom.xml
+++ b/ide/pandora-builder/pom.xml
@@ -52,19 +52,14 @@
 
     <repositories>
         <repository>
-            <id>siani-maven</id>
-            <name>siani-maven-releases</name>
-            <url>http://artifactory.siani.es/artifactory/libs-release</url>
+            <id>intino-maven</id>
+            <name>intino-maven-releases</name>
+            <url>https://artifactory.intino.io/artifactory/release-libraries</url>
         </repository>
         <repository>
-            <id>siani-maven-snapshot</id>
-            <name>siani-maven-snapshot</name>
-            <url>http://artifactory.siani.es/artifactory/libs-snapshot</url>
-        </repository>
-        <repository>
-            <id>siani-maven-language</id>
-            <name>siani-maven-language</name>
-            <url>http://artifactory.siani.es/artifactory/languages-release</url>
+            <id>intino-maven-languages</id>
+            <name>intino-maven-languages</name>
+            <url>https://artifactory.intino.io/artifactory/release-languages</url>
         </repository>
     </repositories>
 
@@ -88,9 +83,9 @@
             <version>2.1.2</version>
         </dependency>
         <dependency>
-            <groupId>org.siani.cottons</groupId>
+            <groupId>io.intino.cottons</groupId>
             <artifactId>cotton-utils</artifactId>
-            <version>LATEST</version>
+            <version>1.0.0</version>
         </dependency>
 
         <dependency>
@@ -106,7 +101,7 @@
             <version>LATEST</version>
         </dependency>
         <dependency>
-            <groupId>org.siani.tara</groupId>
+            <groupId>io.intino.tara</groupId>
             <artifactId>language</artifactId>
             <scope>provided</scope>
             <version>LATEST</version>
