--- a/ide/pandora-model/pom.xml
+++ b/ide/pandora-model/pom.xml
@@ -58,19 +58,9 @@
     </build>
     <repositories>
         <repository>
-            <id>siani-maven</id>
-            <name>siani-maven-releases</name>
-            <url>http://artifactory.siani.es/artifactory/libs-release</url>
-        </repository>
-        <repository>
-            <id>siani-maven-snapshot</id>
-            <name>siani-maven-snapshot</name>
-            <url>http://artifactory.siani.es/artifactory/libs-snapshot</url>
-        </repository>
-        <repository>
-            <id>siani-maven-language</id>
-            <name>siani-maven-language</name>
-            <url>http://artifactory.siani.es/artifactory/languages-release</url>
+            <id>intino-maven</id>
+            <name>intino-maven-releases</name>
+            <url>https://artifactory.intino.io/artifactory/release-libraries</url>
         </repository>
     </repositories>
 
