--- a/jms/pom.xml
+++ b/jms/pom.xml
@@ -3,7 +3,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>io.intino.pandora</groupId>
     <artifactId>pandora-jms</artifactId>
     <version>1.0.2</version>
@@ -23,9 +22,9 @@
 
     <repositories>
         <repository>
-            <id>siani-maven</id>
-            <name>siani-maven-releases</name>
-            <url>http://artifactory.siani.es/artifactory/libs-release</url>
+            <id>intino-maven</id>
+            <name>intino-maven-releases</name>
+            <url>https://artifactory.intino.io/artifactory/release-libraries</url>
         </repository>
     </repositories>
 
@@ -78,7 +77,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>LATEST</version>
+            <version>2.8.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -89,7 +88,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.0.91-beta</version>
+            <version>2.3.9</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
