--- a/scheduler/pom.xml
+++ b/scheduler/pom.xml
@@ -23,9 +23,9 @@
 
     <repositories>
         <repository>
-            <id>siani-maven</id>
-            <name>siani-maven-releases</name>
-            <url>http://artifactory.siani.es/artifactory/libs-release</url>
+            <id>intino-maven</id>
+            <name>intino-maven-releases</name>
+            <url>https://artifactory.intino.io/artifactory/release-libraries</url>
         </repository>
     </repositories>
 
@@ -62,7 +62,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.0.91-beta</version>
+            <version>2.3.9</version>
             <scope>test</scope>
         </dependency>
         <dependency>
