--- a/server/pom.xml
+++ b/server/pom.xml
@@ -35,6 +35,20 @@
                 <directory>test-res</directory>
             </testResource>
         </testResources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
 
         <outputDirectory>../out/production/server</outputDirectory>
         <testOutputDirectory>../out/test/server</testOutputDirectory>
@@ -62,7 +76,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.0.91-beta</version>
+            <version>2.3.9</version>
             <scope>test</scope>
         </dependency>
         <dependency>
