--- a/ide/pandora-test/pom.xml
+++ b/ide/pandora-test/pom.xml
@@ -17,7 +17,6 @@
         <tara.working.package>io.intino.pandora.builder</tara.working.package>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
     <build>
         <outputDirectory>../../out/production/pandora-builder-test</outputDirectory>
         <testOutputDirectory>../../out/test/pandora-builder-test</testOutputDirectory>
@@ -83,7 +82,7 @@
         <dependency>
             <groupId>io.intino.pandora</groupId>
             <artifactId>pandora-server</artifactId>
-            <version>[1.0.0, 2.0.0)</version>
+            <version>1.1.6</version>
             <scope>test</scope>
         </dependency>
         <dependency>
