--- a/ide/pandora-builder/pom.xml
+++ b/ide/pandora-builder/pom.xml
@@ -75,6 +75,13 @@
         <dependency>
             <groupId>io.intino.pandora</groupId>
             <artifactId>model</artifactId>
+            <scope>runtime</scope>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>tara.dsl</groupId>
+            <artifactId>pandora</artifactId>
+            <scope>runtime</scope>
             <version>1.0.0</version>
         </dependency>
         <dependency>
@@ -87,7 +94,6 @@
             <artifactId>cotton-utils</artifactId>
             <version>1.0.0</version>
         </dependency>
-
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
@@ -117,11 +123,6 @@
             <artifactId>maven-invoker</artifactId>
             <scope>provided</scope>
             <version>2.0.11</version>
-        </dependency>
-        <dependency>
-            <groupId>tara.dsl</groupId>
-            <artifactId>pandora</artifactId>
-            <version>1.0.0</version>
         </dependency>
     </dependencies>
 </project>
