--- a/ide/pandora-test/pom.xml
+++ b/ide/pandora-test/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>io.intino.pandora</groupId>
             <artifactId>pandora-plugin</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -36,6 +36,7 @@
             <scope>test</scope>
             <version>1.0.0</version>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -63,6 +64,7 @@
         <dependency>
             <groupId>io.intino.tara</groupId>
             <artifactId>io</artifactId>
+            <scope>test</scope>
             <version>LATEST</version>
         </dependency>
         <dependency>
