--- a/ide/builder/pom.xml
+++ b/ide/builder/pom.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.intino.konos</groupId>
-    <artifactId>konos-plugin</artifactId>
-    <version>2.0.5</version>
+    <artifactId>builder</artifactId>
+    <version>1.0.0</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
