--- a/ide/test/pom.xml
+++ b/ide/test/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.intino.konos</groupId>
-    <artifactId>konos-builder-test</artifactId>
+    <artifactId>builder-test</artifactId>
     <version>1.0.0</version>
 
     <properties>
@@ -26,8 +26,8 @@
     <dependencies>
         <dependency>
             <groupId>io.intino.konos</groupId>
-            <artifactId>konos-plugin</artifactId>
-            <version>2.0.4</version>
+            <artifactId>builder</artifactId>
+            <version>1.0.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -88,7 +88,7 @@
         <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>konos-server</artifactId>
-            <version>1.1.6</version>
+            <version>[1.0.0, 2.0.0)</version>
             <scope>test</scope>
         </dependency>
         <dependency>
