--- a/slack/pom.xml
+++ b/slack/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.intino.konos</groupId>
     <artifactId>konos-slack</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.0</version>
 
     <distributionManagement>
         <repository>
@@ -15,6 +15,8 @@
         </repository>
     </distributionManagement>
     <build>
+        <finalName>konos-${project.artifactId}-${project.version}</finalName>
+
         <outputDirectory>../out/production/slack</outputDirectory>
         <testOutputDirectory>../out/test/slack</testOutputDirectory>
         <directory>../out/build/slack</directory>
