--- a/accessor/pom.xml
+++ b/accessor/pom.xml
@@ -15,7 +15,7 @@
     <repositories>
         <repository>
             <id>intino-maven</id>
-            <name>intino-maven-releases</name>
+            <name>intino-maven</name>
             <url>https://artifactory.intino.io/artifactory/release-libraries</url>
         </repository>
     </repositories>
@@ -60,6 +60,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
+                <version>3.0.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -131,7 +132,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
-            <version>LATEST</version>
+            <version>4.12</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
