--- a/ide/test/pom.xml
+++ b/ide/test/pom.xml
@@ -121,5 +121,10 @@
             <version>1.0.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.intino.konos</groupId>
+            <artifactId>builder</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 </project>
