--- a/ide/builder/pom.xml
+++ b/ide/builder/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.intino.konos</groupId>
     <artifactId>builder</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -111,6 +111,13 @@
             <artifactId>language</artifactId>
             <scope>provided</scope>
             <version>1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.intino.tara</groupId>
+            <artifactId>builder</artifactId>
+            <scope>provided</scope>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.siani.itrules</groupId>
