Updated konos to new magritte interface

--- a/ide/builder/pom.xml
+++ b/ide/builder/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.intino.konos</groupId>
     <artifactId>builder</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -102,7 +102,7 @@
         </dependency>
         <dependency>
             <groupId>io.intino.tara</groupId>
-            <artifactId>magritte-lite</artifactId>
+            <artifactId>magritte</artifactId>
             <scope>provided</scope>
             <version>1.0.0</version>
         </dependency>
