--- a/ide/builder/pom.xml
+++ b/ide/builder/pom.xml
@@ -13,9 +13,9 @@
     </properties>
 
     <build>
-        <outputDirectory>../../out/production/konos-plugin</outputDirectory>
-        <testOutputDirectory>../../out/test/konos-plugin</testOutputDirectory>
-        <directory>../../out/build/konos-plugin</directory>
+        <outputDirectory>../../out/production/builder</outputDirectory>
+        <testOutputDirectory>../../out/test/builder</testOutputDirectory>
+        <directory>../../out/build/builder</directory>
         <!--<sourceDirectory>src</sourceDirectory>-->
         <!--<testResources>-->
         <!--<testResource>-->
