--- a/accessor/pom.xml
+++ b/accessor/pom.xml
@@ -138,7 +138,7 @@
         <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>konos-server</artifactId>
-            <version>LATEST</version>
+            <version>1.0.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
