--- a/jmx/pom.xml
+++ b/jmx/pom.xml
@@ -83,6 +83,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>io.intino.konos</groupId>
+            <artifactId>konos-core</artifactId>
+            <version>[1.0.0, 2.0.0)</version>
+        </dependency>
+        <dependency>
             <groupId>com.sun</groupId>
             <artifactId>tools</artifactId>
             <version>1.8.0</version>
