--- a/scheduler/pom.xml
+++ b/scheduler/pom.xml
@@ -58,12 +58,6 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>2.3.9</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
             <version>2.2.1</version>
@@ -72,6 +66,11 @@
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz-jobs</artifactId>
             <version>2.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.intino.konos</groupId>
+            <artifactId>konos-core</artifactId>
+            <version>[1.0.0, 2.0.0)</version>
         </dependency>
     </dependencies>
 
