--- a/ide/builder/pom.xml
+++ b/ide/builder/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.intino.konos</groupId>
     <artifactId>builder</artifactId>
-    <version>1.4.2</version>
+    <version>1.5.0</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -87,8 +87,8 @@
         </dependency>
         <dependency>
             <groupId>io.swagger</groupId>
-            <artifactId>swagger-codegen-cli</artifactId>
-            <version>2.1.2</version>
+            <artifactId>swagger-codegen</artifactId>
+            <version>2.1.5</version>
         </dependency>
         <dependency>
             <groupId>io.intino.cottons</groupId>
