--- a/core/pom.xml
+++ b/core/pom.xml
@@ -49,9 +49,9 @@
             <version>2.8.0</version>
         </dependency>
         <dependency>
-            <groupId>com.moandjiezana.toml</groupId>
-            <artifactId>toml4j</artifactId>
-            <version>0.7.1</version>
+            <groupId>io.intino</groupId>
+            <artifactId>inl-java8</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 </project>
