--- a/core/pom.xml
+++ b/core/pom.xml
@@ -49,7 +49,7 @@
             <version>2.8.0</version>
         </dependency>
         <dependency>
-            <groupId>io.intino</groupId>
+            <groupId>io.intino.ness</groupId>
             <artifactId>inl-java8</artifactId>
             <version>1.0.0</version>
         </dependency>
