--- a/slack/pom.xml
+++ b/slack/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.intino.konos</groupId>
     <artifactId>konos-slack</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
 
     <distributionManagement>
         <repository>
@@ -53,6 +53,11 @@
             <groupId>com.ullink.slack</groupId>
             <artifactId>simpleslackapi</artifactId>
             <version>LATEST</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
         </dependency>
         <dependency>
             <groupId>io.intino.konos</groupId>
