--- a/server/pom.xml
+++ b/server/pom.xml
@@ -19,6 +19,11 @@
             <name>siani-maven-releases</name>
             <url>http://artifactory.siani.es/artifactory/libs-release</url>
         </repository>
+        <repository>
+            <id>intino-maven</id>
+            <name>intino-maven-releases</name>
+            <url>https://artifactory.intino.io/artifactory/release-libraries</url>
+        </repository>
     </repositories>
 
     <distributionManagement>
@@ -53,6 +58,7 @@
         <outputDirectory>../out/production/server</outputDirectory>
         <testOutputDirectory>../out/test/server</testOutputDirectory>
         <directory>../out/build/server</directory>
+
         <sourceDirectory>src</sourceDirectory>
     </build>
 
@@ -62,10 +68,21 @@
             <artifactId>konos-core</artifactId>
             <version>[1.0.0, 2.0.0)</version>
         </dependency>
+
         <dependency>
             <groupId>com.sparkjava</groupId>
             <artifactId>spark-core</artifactId>
             <version>2.5.5</version>
+        </dependency>
+        <dependency>
+            <groupId>io.intino.cottons</groupId>
+            <artifactId>cotton-utils</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
