--- a/ide/builder/pom.xml
+++ b/ide/builder/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.intino.konos</groupId>
     <artifactId>builder</artifactId>
-    <version>1.7.7</version>
+    <version>1.8.0</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -103,16 +103,15 @@
 
         <dependency>
             <groupId>io.intino.tara</groupId>
-            <artifactId>language</artifactId>
-            <scope>provided</scope>
-            <version>1.0.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.intino.tara</groupId>
             <artifactId>builder</artifactId>
             <scope>provided</scope>
-            <version>[1.0.2,2.0.0)</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.intino.tara</groupId>
+                    <artifactId>io</artifactId>
+                </exclusion>
+            </exclusions>
+            <version>[1.2.0,2.0.0)</version>
         </dependency>
         <dependency>
             <groupId>org.siani.itrules</groupId>
