--- a/core/pom.xml
+++ b/core/pom.xml
@@ -48,5 +48,10 @@
             <artifactId>gson</artifactId>
             <version>2.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.intino.ness</groupId>
+            <artifactId>inl</artifactId>
+            <version>[1.0.0, 2.0.0)</version>
+        </dependency>
     </dependencies>
 </project>
