--- a/datalake/pom.xml
+++ b/datalake/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.intino.konos</groupId>
     <artifactId>konos-datalake</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -30,9 +30,9 @@
 
     <build>
         <sourceDirectory>src</sourceDirectory>
-        <outputDirectory>../out/production/scheduler</outputDirectory>
-        <testOutputDirectory>../out/test/scheduler</testOutputDirectory>
-        <directory>../out/build/scheduler</directory>
+        <outputDirectory>../out/production/datalake</outputDirectory>
+        <testOutputDirectory>../out/test/datalake</testOutputDirectory>
+        <directory>../out/build/datalake</directory>
         <finalName>${project.artifactId}-${project.version}</finalName>
 
         <plugins>
