--- a/jmx/pom.xml
+++ b/jmx/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.intino.konos</groupId>
     <artifactId>konos-jmx</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -56,29 +56,29 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>2.4.3</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml
-                            </dependencyReducedPomLocation>
-                            <minimizeJar>false</minimizeJar><!--important-->
-                            <artifactSet>
-                                <includes>
-                                    <include>com.sun:tools:*</include>
-                                </includes>
-                            </artifactSet>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-shade-plugin</artifactId>-->
+                <!--<version>2.4.3</version>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<phase>package</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>shade</goal>-->
+                        <!--</goals>-->
+                        <!--<configuration>-->
+                            <!--<dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml-->
+                            <!--</dependencyReducedPomLocation>-->
+                            <!--<minimizeJar>false</minimizeJar>&lt;!&ndash;important&ndash;&gt;-->
+                            <!--<artifactSet>-->
+                                <!--<includes>-->
+                                    <!--<include>com.sun:tools:*</include>-->
+                                <!--</includes>-->
+                            <!--</artifactSet>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
         </plugins>
     </build>
 
