--- a/ide/builder/res/konos.toml
+++ b/ide/builder/res/konos.toml
@@ -12,19 +12,19 @@ relativeToAction="NewTaraFile"
 anchor="first"
 
 [[actions]]
-id="CreateKonosAPI"
+id="CreateKonosBox"
 aClass="io.intino.konos.builder.actions.CreateKonosBoxAction"
-text="Create Konos Shell"
-description="Create Konos Shell"
+text="Create Konos Box"
+description="Create Konos Box"
 shortcut="control alt S"
-groupId="ToolbarMakeGroup"
+groupId="intino"
 anchor="first"
 
 [[actions]]
 id="PublishAccesors"
 aClass="io.intino.konos.builder.actions.PublishAccessorAction"
-text="Distribute Konos Accessor"
-description="Distribute Konos Accessor in Artifactory"
+text="Distribute Konos Accessors"
+description="Distribute Konos Accessors in Artifactory"
 shortcut="control alt A"
-groupId="ToolbarMakeGroup"
+groupId="intino" "ToolbarMakeGroup"
 anchor="first"
