--- a/jmx/pom.xml
+++ b/jmx/pom.xml
@@ -86,7 +86,7 @@
         <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>konos-core</artifactId>
-            <version>[1.0.0, 2.0.0)</version>
+            <version>2.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.sun</groupId>
