--- a/server/pom.xml
+++ b/server/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.intino.konos</groupId>
     <artifactId>konos-server</artifactId>
-    <version>1.0.7</version>
+    <version>1.0.8</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -66,7 +66,7 @@
         <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>konos-core</artifactId>
-            <version>[1.0.0, 2.0.0)</version>
+            <version>[2.0.0,3.0.0)</version>
         </dependency>
 
         <dependency>
