--- a/jmx/pom.xml
+++ b/jmx/pom.xml
@@ -31,7 +31,7 @@
         <repository>
             <id>intino-maven</id>
             <name>intino-maven-releases</name>
-            <url>https://artifactory.intino.io/artifactory/release-libraries</url>
+            <url>https://artifactory.intino.io/artifactory/releases</url>
         </repository>
     </repositories>
 
