updated builder. adding dialogs to server and builder. konos-server/1.1.0

--- a/ide/builder/res/konos.toml
+++ b/ide/builder/res/konos.toml
@@ -9,7 +9,15 @@ id="NewKonosFile"
 aClass="io.intino.konos.builder.actions.CreateKonosFileAction"
 groupId="NewGroup"
 relativeToAction="NewTaraFile"
-anchor="first"
+anchor="after"
+
+[[actions]]
+id="NewKonosTestFile"
+aClass="io.intino.konos.builder.actions.CreateKonosTestFileAction"
+description="Create Box Test File"
+groupId="NewGroup"
+relativeToAction="NewKonosFile"
+anchor="after"
 
 [[actions]]
 id="CreateKonosBox"
