--- a/core/pom.xml
+++ b/core/pom.xml
@@ -83,7 +83,7 @@
         <dependency>
             <groupId>io.intino.ness</groupId>
             <artifactId>inl</artifactId>
-            <version>[1.0.0, 2.0.0)</version>
+            <version>1.0.3</version>
         </dependency>
     </dependencies>
 </project>
