--- a/server/pom.xml
+++ b/server/pom.xml
@@ -17,12 +17,12 @@
         <repository>
             <id>siani-maven</id>
             <name>siani-maven-releases</name>
-            <url>http://artifactory.siani.es/artifactory/libs-release</url>
+            <url>https://artifactory.siani.es/artifactory/libs-release</url>
         </repository>
         <repository>
             <id>intino-maven</id>
             <name>intino-maven-releases</name>
-            <url>https://artifactory.intino.io/artifactory/release-libraries</url>
+            <url>https://artifactory.intino.io/artifactory/releases</url>
         </repository>
     </repositories>
 
