updated server web pom

--- a/server-web/pom.xml
+++ b/server-web/pom.xml
@@ -38,7 +38,24 @@
         <outputDirectory>../out/production/server-web</outputDirectory>
         <testOutputDirectory>../out/test/server-web</testOutputDirectory>
         <directory>../out/build/server-web</directory>
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
+
 
     <dependencies>
 
