updated ness generated code. update ness library. coherence

--- a/ness-accessor/pom.xml
+++ b/ness-accessor/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.intino.konos</groupId>
-    <artifactId>konos-datalake</artifactId>
-    <version>1.0.4</version>
+    <artifactId>konos-ness-accessor</artifactId>
+    <version>1.0.0</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
