--- a/ide/test/pom.xml
+++ b/ide/test/pom.xml
@@ -104,7 +104,7 @@
         </dependency>
         <dependency>
             <groupId>io.intino.konos</groupId>
-            <artifactId>konos-datalake</artifactId>
+            <artifactId>konos-ness-accessor</artifactId>
             <version>[1.0.0, 2.0.0)</version>
             <scope>test</scope>
         </dependency>
