improved builder code generation. added jmx operations of ness datalake. improved ness-accessor

--- a/ness-accessor/pom.xml
+++ b/ness-accessor/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.intino.konos</groupId>
     <artifactId>konos-ness-accessor</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -74,6 +74,12 @@
             <groupId>io.intino.konos</groupId>
             <artifactId>konos-jms</artifactId>
             <version>1.0.9</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.intino.konos</groupId>
+            <artifactId>konos-jmx</artifactId>
+            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
