--- a/ide/test/pom.xml
+++ b/ide/test/pom.xml
@@ -53,7 +53,7 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <scope>test</scope>
-            <version>2.8</version>
+            <version>2.8.0</version>
         </dependency>
         <dependency>
             <groupId>io.intino.tara</groupId>
@@ -86,44 +86,39 @@
         </dependency>
         <dependency>
             <groupId>io.intino.konos</groupId>
-            <artifactId>konos-jmx</artifactId>
+            <artifactId>alexandria-jmx</artifactId>
             <version>[1.0.0, 2.0.0)</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.intino.konos</groupId>
-            <artifactId>konos-scheduler</artifactId>
+            <artifactId>alexandria-scheduler</artifactId>
             <version>[1.0.0, 2.0.0)</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.intino.konos</groupId>
-            <artifactId>konos-jms</artifactId>
+            <artifactId>alexandria-jms</artifactId>
             <version>[1.0.0, 2.0.0)</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.intino.konos</groupId>
-            <artifactId>konos-ness-accessor</artifactId>
+            <artifactId>alexandria-ness-accessor</artifactId>
             <version>[1.0.0, 2.0.0)</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.intino.konos</groupId>
-            <artifactId>konos-slack</artifactId>
+            <artifactId>alexandria-slack</artifactId>
             <version>[1.0.0, 2.0.0)</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.intino.konos</groupId>
-            <artifactId>konos-rest-accessor-java</artifactId>
-            <version>1.1.0</version>
+            <artifactId>alexandria-rest-accessor-java</artifactId>
+            <version>1.1.2</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.intino.konos</groupId>
-            <artifactId>builder</artifactId>
-            <version>3.0.0</version>
         </dependency>
     </dependencies>
 </project>
