--- a/alexandria/slack/pom.xml
+++ b/alexandria/slack/pom.xml
@@ -109,8 +109,8 @@
         </dependency>
         <dependency>
             <groupId>io.intino.konos</groupId>
-            <artifactId>konos-core</artifactId>
-            <version>2.0.2</version>
+            <artifactId>alexandria-core</artifactId>
+            <version>1.0.0</version>
         </dependency>
 
     </dependencies>
