--- a/ness-accessor/pom.xml
+++ b/ness-accessor/pom.xml
@@ -72,18 +72,18 @@
         </dependency>
         <dependency>
             <groupId>io.intino.konos</groupId>
-            <artifactId>konos-core</artifactId>
-            <version>2.0.2</version>
+            <artifactId>alexandria-core</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>io.intino.konos</groupId>
-            <artifactId>konos-jms</artifactId>
-            <version>1.0.10</version>
+            <artifactId>alexandria-jms</artifactId>
+            <version>1.0.11</version>
         </dependency>
 
         <dependency>
             <groupId>io.intino.konos</groupId>
-            <artifactId>konos-jmx</artifactId>
+            <artifactId>alexandria-jmx</artifactId>
             <version>1.0.1</version>
         </dependency>
         <dependency>
