--- a/rest-accessor/pom.xml
+++ b/rest-accessor/pom.xml
@@ -95,8 +95,8 @@
     <dependencies>
         <dependency>
             <groupId>io.intino.konos</groupId>
-            <artifactId>konos-core</artifactId>
-            <version>2.0.2</version>
+            <artifactId>alexandria-core</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
@@ -137,8 +137,8 @@
         </dependency>
         <dependency>
             <groupId>io.intino.konos</groupId>
-            <artifactId>konos-server</artifactId>
-            <version>[1.1.3, 2.0.0)</version>
+            <artifactId>alexandria-rest</artifactId>
+            <version>1.0.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
