updated widget template

--- a/alexandria/core/pom.xml
+++ b/alexandria/core/pom.xml
@@ -85,5 +85,10 @@
             <artifactId>inl</artifactId>
             <version>1.0.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.7</version>
+        </dependency>
     </dependencies>
 </project>
