alexandria-ui: added map title when moves hover a marker. Fix bug loading desktop element by using a stamp catalog link. Load vertical range navigator by default.

--- a/ide/test/pom.xml
+++ b/ide/test/pom.xml
@@ -84,7 +84,7 @@
         </dependency>
         <dependency>
             <groupId>io.intino.konos</groupId>
-            <artifactId>alexandria-activity</artifactId>
+            <artifactId>alexandria-ui</artifactId>
             <version>[1.6.2, 2.0.0)</version>
             <scope>test</scope>
         </dependency>
