alexandria-ui: fix bug loading temporal catalog items on demand. poms: added names

--- a/alexandria/core/pom.xml
+++ b/alexandria/core/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>io.intino.konos</groupId>
     <artifactId>alexandria-core</artifactId>
+    <name>Core</name>
     <version>1.0.3</version>
 
     <properties>
