--- a/alexandria/slack/pom.xml
+++ b/alexandria/slack/pom.xml
@@ -5,6 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.intino.konos</groupId>
     <artifactId>alexandria-slack</artifactId>
+    <name>Slack</name>
     <version>1.0.12</version>
 
 
