--- a/alexandria/ui/pom.xml
+++ b/alexandria/ui/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>io.intino.konos</groupId>
     <artifactId>alexandria-ui</artifactId>
+    <name>User Interface</name>
     <version>1.0.3</version>
 
     <properties>
