--- a/ide/test/pom.xml
+++ b/ide/test/pom.xml
@@ -4,6 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.intino.konos</groupId>
     <artifactId>builder-test</artifactId>
+    <name>Builder Test</name>
     <version>1.0.0</version>
 
     <properties>
