--- a/rest-accessor/pom.xml
+++ b/rest-accessor/pom.xml
@@ -5,6 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.intino.konos</groupId>
     <artifactId>alexandria-rest-accessor-java</artifactId>
+    <name>Rest Accessor</name>
     <version>1.1.4</version>
 
     <properties>
