--- a/alexandria/core/pom.xml
+++ b/alexandria/core/pom.xml
@@ -7,7 +7,7 @@
     <groupId>io.intino.konos</groupId>
     <artifactId>alexandria-core</artifactId>
     <name>Core</name>
-    <version>1.0.3</version>
+    <version>1.0.4</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -84,7 +84,7 @@
         <dependency>
             <groupId>io.intino.ness</groupId>
             <artifactId>inl</artifactId>
-            <version>1.1.0</version>
+            <version>[1.1.0,2.0.0)</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
