--- a/alexandria/jms/pom.xml
+++ b/alexandria/jms/pom.xml
@@ -6,7 +6,7 @@
     <groupId>io.intino.konos</groupId>
     <artifactId>alexandria-jms</artifactId>
     <name>Jms</name>
-    <version>1.0.14</version>
+    <version>1.0.15</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -69,7 +69,7 @@
         <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>alexandria-core</artifactId>
-            <version>1.0.3</version>
+            <version>[1.0.4,2.0.0)</version>
         </dependency>
         <dependency>
             <groupId>org.apache.activemq</groupId>
