--- a/alexandria/rest/pom.xml
+++ b/alexandria/rest/pom.xml
@@ -7,7 +7,7 @@
     <groupId>io.intino.konos</groupId>
     <artifactId>alexandria-rest</artifactId>
     <name>Rest</name>
-    <version>2.2.4</version>
+    <version>2.2.5</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -62,7 +62,7 @@
         <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>alexandria-core</artifactId>
-            <version>1.0.3</version>
+            <version>[1.0.3, 2.0.0)</version>
         </dependency>
         <dependency>
             <groupId>com.sparkjava</groupId>
