--- a/alexandria/scheduler/pom.xml
+++ b/alexandria/scheduler/pom.xml
@@ -7,7 +7,7 @@
     <groupId>io.intino.konos</groupId>
     <artifactId>alexandria-scheduler</artifactId>
     <name>Scheduler</name>
-    <version>1.0.6</version>
+    <version>1.0.7</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -71,7 +71,7 @@
         <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>alexandria-core</artifactId>
-            <version>1.0.3</version>
+            <version>[1.0.3, 2.0.0)</version>
         </dependency>
     </dependencies>
 
