--- a/rest-accessor/pom.xml
+++ b/rest-accessor/pom.xml
@@ -6,7 +6,7 @@
     <groupId>io.intino.konos</groupId>
     <artifactId>alexandria-rest-accessor-java</artifactId>
     <name>Rest Accessor</name>
-    <version>1.1.7</version>
+    <version>1.1.8</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -97,7 +97,7 @@
         <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>alexandria-core</artifactId>
-            <version>1.0.3</version>
+            <version>[1.0.3,2.0.0)</version>
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
