fixed errors in code generation process

--- a/ide/test/pom.xml
+++ b/ide/test/pom.xml
@@ -109,6 +109,12 @@
         </dependency>
         <dependency>
             <groupId>io.intino.konos</groupId>
+            <artifactId>alexandria-rest</artifactId>
+            <version>LATEST</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.intino.konos</groupId>
             <artifactId>alexandria-rest-accessor-java</artifactId>
             <version>LATEST</version>
             <scope>test</scope>
